tests/errors/surf_cont_07.experr
remove: value not in Set
